--- a/src/styles/JobList.module.css
+++ b/src/styles/JobList.module.css
@@ -189,7 +189,7 @@
   flex: 0 0 35px;
   color: #888;
   font-size: 0.9em;
-  margin-right: 0;
+  margin-right: 8px;
 }
 
 .timeBookmarkContainer {
